put thread at 1 bis